# qUnleashed

./: .gitignore  .gitmodules  DEV.md  README.md  TODO.md  analysis_options.yaml  firebase.json  firebase.txt  pubspec.yaml
.github/scripts/: restore_firebase_config.sh
.github/workflows/: auto-release.yml
android/app/: build.gradle.kts
assets/: firmware_config.json
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  flipper_client.dart  main.dart  theme.dart
lib/components/: appbar.dart  icon.dart
lib/flipperlib/: app.dart  ble.dart  client.dart  desktop.dart  flipper_client.dart  flipperlib.dart  gpio.dart  gui.dart  property.dart  protobuf.dart  storage.dart  system.dart  usb.dart
lib/models/: category.dart  discovered_device.dart  firmware_config.dart  firmware_directory.dart  firmware_updater.dart  ofw_parser.dart  unleashed_parser.dart
lib/modules/cpp/mfkey32/: CMakeLists.txt  mfkey32_bridge.c
lib/pages/: device_info.dart  device_info_page.dart  device_list.dart  device_list_page.dart  remote_control.dart  remote_control_page.dart
lib/screens/: device_info_screen.dart  device_list_screen.dart  remote_control_screen.dart
lib/services/: ble_service.dart  (+3 more)
linux/: CMakeLists.txt
test/: archive_sync_progress_test.dart  dfu_parsers_test.dart  network_http_util_test.dart  plotter_transform_test.dart  progress_button_test.dart  virtual_flipper_test.dart
tools/: restore_firebase_config.sh  svg_format_editor.html  svg_tools_editor.html
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+475 files in other folders)
